# products-webview

./: .gitignore  Company-File-Manager-Linux.spec  README.md  app.icns  app.py  prodlib  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
data/: settings.json
frontend/: index.html
frontend/src/: app.js  main.js  style.css
prodlib/: __init__.py  company.py  core.py  deal.py  store.py
scripts/: register-linux.sh
