[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "company-file-manager"
version = "1.0.0"
description = "Company File Manager — browse products, companies, deals, and any business documents"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=5.0",
    "pyyaml>=6.0",
    "bottle>=0.13",
]
